<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Super Duo</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="spotify_streamer_toast">This button will launch the Spotify Streamer app!</string>
    <string name="scores_app_toast">This button will launch the Super Duo app!</string>
    <string name="build_it_bigger_toast">This button will launch the Build It Bigger app!</string>
    <string name="xyz_reader_toast">This button will launch the XYZ Reader app!</string>
    <string name="capstone_toast">This button will launch my Capstone app!</string>

</resources>