<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:orientation="vertical"
                android:background="@color/bkgd">

    <TextView
        android:text="@string/my_nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/text_margin_top"
        android:layout_marginTop="@dimen/text_margin_bottom"/>

    <Button
        android:id="@+id/spotify_streamer_button"
        android:text="@string/spotify_streamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_primary"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:textColor="@color/button_text_color"
        android:onClick="showToast" />

    <Button
        android:id="@+id/scores_app_button"
        android:text="@string/scores_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_primary"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:textColor="@color/button_text_color"
        android:onClick="showToast" />

    <Button
        android:id="@+id/build_it_bigger_button"
        android:text="@string/build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_primary"
        android:layout_marginBottom="10dp"
        android:textColor="@color/button_text_color"
        android:onClick="showToast" />

    <Button
        android:id="@+id/xyz_reader_button"
        android:text="@string/xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_primary"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:textColor="@color/button_text_color"
        android:onClick="showToast" />

    <Button
        android:id="@+id/capstone_button"
        android:text="@string/capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_secondary"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:textColor="@color/button_text_color"
        android:onClick="showToast" />

</LinearLayout>